chore: Introduce library structure